--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -40,3 +40,59 @@
 .read-the-docs {
   color: #888;
 }
+.App {
+  font-family: Arial, sans-serif;
+  padding: 40px;
+  max-width: 600px;
+  margin: 0 ;
+  background-color:cornflowerblue;
+  border-radius: 8px;
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+form div {
+  margin-bottom: 15px;
+}
+
+label {
+  text-align: center;
+  display: block;
+  margin-bottom: 3px;
+}
+
+input,
+textarea {
+  text-align: center;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  
+}
+
+textarea {
+  text-align: center;
+  resize: none;
+}
+
+button {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #45a049;
+}
